--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "serve-static",
   "description": "Serve static files",
-  "version": "1.13.2",
+  "version": "1.13.3",
   "author": "Douglas Christopher Wilson <doug@somethingdoug.com>",
   "license": "MIT",
   "repository": "expressjs/serve-static",
@@ -9,7 +9,7 @@
     "encodeurl": "~1.0.2",
     "escape-html": "~1.0.3",
     "parseurl": "~1.3.2",
-    "send": "0.16.2"
+    "send": "github:hinell/send#0.17.0"
   },
   "devDependencies": {
     "eslint": "3.19.0",
